--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/layout"
     tools:context=".MainActivity">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/Exists"/>
 
     <ImageView
         android:id="@+id/canvas"
@@ -21,8 +26,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:id="@+id/buttons"
+        android:orientation="horizontal"
         app:layout_constraintVertical_chainStyle="spread"
         app:layout_constraintBottom_toBottomOf="@+id/canvas">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/Exists"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
